<resources>
    <string name="app_name">FinalSubmission</string>
    <string name="title_home">Home</string>
    <string name="movie">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="favorites">Favorites</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_movie">Poster Movie</string>
    <string name="release_date">Release Date :</string>
    <string name="action_horror_comedy">Action, Horror, Comedy</string>
    <string name="favorite_tv">Favorite Tv</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="overview">Overview</string>
    <string name="original_language">Original Language</string>
    <string name="favorite">Favorite</string>
    <string name="watchlist">Watchlist</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="no_data">There is no movie data for now</string>
    <string name="no_data_tv">There is no tv show data for now</string>
    <string name="snackbar_delete">Are you sure want to delete this ?</string>
    <string name="undo">Undo</string>
    <string name="add_favorite">has added to your favorite list</string>
    <string name="delete_favorite">has deleted from your favorite list</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="movie_favorite_widget">MOVIE FAVORITE WIDGET</string>
    <string name="favorite_no_data">Your favorite movie list is empty</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="notifications">Notifications</string>
    <string name="general">General</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="daily_date">Daily reminder movie</string>
    <string name="daily_reminder">Daily reminder app</string>
    <string name="summary_app">The application will always send notifications to you every 8 am</string>
    <string name="summary_date">The application will always send notifications to you about the film that will air today at 7 am</string>
    <string name="settings">Settings</string>
    <string name="reminder_app_title">Daily Reminder App</string>
    <string name="reminder_app_message">Check Movie Catalog For Today</string>
    <string name="reminder_movie_title">Daily Reminder Movie</string>
    <string name="repeating_app">Repeating App Set</string>
    <string name="cancel_repeating_app">Repeating App is Canceled</string>
    <string name="repeating_movie">Repeating Movie Set</string>
    <string name="cancel_repeating_movie">Repeating Movie is Canceled</string>
    <string name="release_today">is release today</string>
    <string name="search">Search</string>
    <string name="search_movie_hint">Search Movie</string>
    <string name="search_tv_hint">Search Tv Show</string>
    <string name="SearchMovieActivity">SearchMovieActivity</string>
    <string name="submit">Submit</string>
    <string name="overview_test">"A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground \"fight clubs\" forming in every town, until an eccentric gets in the way  and ignites an out-of-control spiral toward oblivion.",</string>
    <string name="duration">Duration :</string>
    <string name="vote_average">Vote Average :</string>
    <string name="review">Review</string>
    <string name="videos">Videos</string>
    <string name="detail">Detail</string>
    <string name="video_trailer">Video Trailer</string>
    <string name="author">Author :</string>
    <string name="url">Url :</string>
    <string name="content">Content :</string>
    <string name="homepage">Homepage :</string>
    <string name="status">Status :</string>
    <string name="tagline">Tagline :</string>
    <string name="popularity">Popularity :</string>
    <string name="details">Details</string>
    <string name="image_trailer">Image Trailer</string>
    <string name="see_all">See All</string>
    <string name="number_of_seasons">Number of Seasons :</string>
    <string name="number_of_episodes">Number of Episodes :</string>
    <string name="language">Language :</string>
    <string name="no_movie_review">There are still no reviews for this movie</string>
    <string name="no_tv_review">There are still no reviews for this tv show</string>
    <string name="delete_item">One item successfully deleted</string>
    <string name="movie_search_result">Movie Search Result</string>
    <string name="tv_search_result">Tv Show Search Result</string>
    <string name="no_release_today">There is no movie in release today</string>
    <string name="popular_movie">Most Popular Movie</string>
    <string name="top_movie">Top Rated Movie</string>
    <string name="up_movie">Upcoming Movie</string>
    <string name="select_category_movie">Select Category</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="dicoding_movie">Dicoding Movie</string>
    <string name="detail_activity">DetailActivity</string>
    <string name="search_activity">SearchAvtivity</string>
    <string name="detail_tv">DetailTvShow</string>
    <string name="by">by</string>
    <string name="peoples">peoples</string>
    <string name="fame">fame</string>
    <string name="region">Region</string>
    <string name="language_setting">Change Language Setting</string>

    <string-array name="spinner_movie">
        <item>Select Category</item>
        <item>Most Popular Movie</item>
        <item>Top Rated Movie</item>
        <item>Upcoming Movie</item>
    </string-array>

    <string-array name="spinner_tv">
        <item>Select Category</item>
        <item>Most Popular Tv Show</item>
        <item>Top Rated Tv Show</item>
        <item>On The Air Tv Show</item>
    </string-array>
</resources>
