<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie_black_24dp"
        android:enabled="true"
        android:title="@string/movie"/>

    <item
        android:id="@+id/navigation_tvshow"
        android:enabled="true"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/tv_shows"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:enabled="true"
        android:title="@string/favorites"/>
</menu>
