<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    tools:context=".activity.DetailMovieActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/txt_desc"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintVertical_bias="0.110000014" />

            <ProgressBar
                android:id="@+id/progress_bar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/include_video"
                app:layout_constraintEnd_toEndOf="@+id/include_video"
                app:layout_constraintStart_toStartOf="@+id/include_video"
                app:layout_constraintTop_toTopOf="@+id/include_video" />

            <FrameLayout
                android:id="@+id/linear_movie_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/image_trailer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_play_circle_outline_black_24dp"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="132dp"
                android:layout_height="180dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:contentDescription="@string/poster_movie" />

            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/linear_movie_trailer"
                app:layout_constraintVertical_bias="0.419"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/secondary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_movie_trailer"
                tools:text="Avengger Infinity War" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/img_photo"
                app:layout_constraintTop_toBottomOf="@+id/txt_release_date"
                tools:text="2019-10-12" />

            <TextView
                android:id="@+id/txt_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/duration"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/secondary_text"
                app:layout_constraintStart_toEndOf="@+id/img_photo"
                app:layout_constraintTop_toBottomOf="@+id/txt_date" />

            <TextView
                android:id="@+id/txt_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/img_photo"
                app:layout_constraintTop_toBottomOf="@+id/txt_runtime"
                tools:text="149 min" />

            <TextView
                android:id="@+id/txt_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/secondary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title"
                tools:text="Action, Romance, Comedy, Horor" />

            <TextView
                android:id="@+id/txt_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/release_date"
                android:textSize="16sp"
                android:textColor="@color/secondary_text"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_photo"
                app:layout_constraintTop_toTopOf="@+id/img_photo" />

            <TextView
                android:id="@+id/txt_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/secondary_text"
                android:text="@string/vote_average"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_photo"
                app:layout_constraintTop_toBottomOf="@+id/txt_duration" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:stepSize="0.5"
                android:theme="@style/RatingBar"
                app:layout_constraintStart_toEndOf="@+id/img_photo"
                app:layout_constraintTop_toBottomOf="@+id/txt_vote_average" />

            <TextView
                android:id="@+id/txt_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                android:textColor="@color/secondary_text"
                app:layout_constraintBottom_toBottomOf="@+id/rating_bar"
                app:layout_constraintStart_toEndOf="@+id/rating_bar"
                app:layout_constraintTop_toTopOf="@+id/rating_bar"
                tools:text="7.5" />

            <TextView
                android:id="@+id/txt_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/overview"
                android:textColor="@color/secondary_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_desc"
                tools:text="@string/overview_test" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_genre" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_photo" />

            <include
                android:id="@+id/include_video"
                layout="@layout/layout_movie_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_overview" />


            <include
                android:id="@+id/include_detail"
                layout="@layout/layout_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include_video" />

            <include
                android:id="@+id/include_review"
                layout="@layout/layout_movie_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include_detail" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</ScrollView>